# fake-format-ml

./: LICENSE  README.md  __init__.py  errors.py  lineparser.py  setup.cfg
examples/: chars.fkfm  code.fkfm  empty-tag.fkfm  heading.fkfm  inline.fkfm  list.fkfm  note.fkfm  ordered-list.fkfm  quote.fkfm  spacing.fkfm  table.fkfm  tag.fkfm  url.fkfm
src/fakeformat/: __init__.py  __main__.py  blocks.py  elements.py  htmlsink.py  lineparser.py  regexshim.py
