[metadata]
name = fakeformat
version = 0.9.1
license = MIT
description = A markup language for blogs
long_description = file: README.md, LICENSE
author = Roeland Schoukens
classifiers=
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Topic :: Text Processing :: Markup

[options]
packages = find:
package_dir =
    =modules
include_package_data = True

[options.packages.find]
where=src
